# django-ninja-auth

./: README.md  pyproject.toml
django_ninja_auth/: schema.py
ninja_auth/: __init__.py  api.py  apps.py  schema.py  settings.py
