[tool.poetry]
name = "django_ninja_auth"
version = "0.1.3"
description = "Django authorization views adapted to django-ninja"
license = "WTFPL"
readme = "README.md"
homepage = "https://github.com/mugartec/django-ninja-auth"
repository = "https://github.com/mugartec/django-ninja-auth"
keywords = ["django", "django-ninja", "auth"]
packages = [{include = "ninja_auth"}]
authors = ["Martín Ugarte <contact@martinugarte.com>"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
django-ninja = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
